--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="app/board/list">게시글</span></a>
+        <a class="nav-link" href="app/notice/list">공지사항</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="app/lesson/list">수업</a>
