[add] 일정 상세보기, 업데이트, 삭제 기능 구현
  dao/PlanDao.java 추가, service/PlanService.java 추가, service/impl/PlanServiceImpl.java 추가,
  web/PlanController.java 추가
  /mapper/PlanMapper.xml 추가,
  /WEB-INF/jsp/plan/detail.jsp 추가
  /WEB-INF/jsp/plan/form.jsp 추가
  /WEB-INF/jsp/plan/list.jsp 추가

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="app/board/list">게시글</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="app/lesson/list">수업</a>
+        <a class="nav-link" href="app/plan/list">일정</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="app/member/list">회원</a>
