--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,9 @@
         <a class="nav-link" href="app/plan/list">일정</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="app/feed/list">피드</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="app/member/list">회원</a>
       </li>
       <li class="nav-item">
