[add,mod] eXERD 수정 및 계좌 관련 테이블 추가
모임에서 계좌 관련 정보 nm_group_account 테이블로 추출
src/main/java/com/nmnm/gms/domain/GroupAccount.java 생성

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,9 @@
         <a class="nav-link" href="app/member/list">회원</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="app/group/list">모임</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="app/auth/form">로그인</a>
       </li>
     </ul>
