--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,9 @@
         <a class="nav-link" href="app/group/list">모임</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="app/account/list">회계</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="app/auth/form">로그인</a>
       </li>
     </ul>
