[add] 로그인, 회원가입 구현 중

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,10 +35,18 @@
       <li class="nav-item">
         <a class="nav-link" href="app/account/list">회계</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="app/auth/form">로그인</a>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          접속하기
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="app/auth/loginForm">로그인</a>
+          <a class="dropdown-item" href="#">로그아웃</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="app/auth/signup">회원가입</a>
+        </div>
       </li>
-    </ul>
+      </ul>
   </div>
 </nav>
 
