[mod] notice, co 변수명 변경

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="app/feed/list">피드</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="app/communicationBoard/list">소통게시판</a>
+        <a class="nav-link" href="app/co/list">소통게시판</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="app/member/list">회원</a>
