--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="app/feed/list">피드</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="app/co/list">소통게시판</a>
+        <a class="nav-link" href="app/communicationBoard/list">소통게시판</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="app/member/list">회원</a>
@@ -40,10 +40,10 @@
           접속하기
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="app/auth/loginForm">로그인</a>
+          <a class="dropdown-item" href="app/auth/login">로그인</a>
           <a class="dropdown-item" href="#">로그아웃</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="app/auth/signup">회원가입</a>
+          <a class="dropdown-item" href="app/auth/join">회원가입</a>
         </div>
       </li>
       </ul>
