--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="app/notice/list">공지사항</span></a>
+        <a class="nav-link" href="app/notice/list">공지사항</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="app/plan/list">일정</a>
@@ -24,7 +24,7 @@
         <a class="nav-link" href="app/feed/list">피드</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="app/communicationBoard/list">소통게시판</a>
+        <a class="nav-link" href="app/co/list">소통게시판</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="app/member/list">회원</a>
