--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -122,7 +122,7 @@
 				            <!-- Collect the nav links, forms, and other content for toggling -->
 				            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 				                <ul class="nav navbar-nav navbar-center" data-in="fadeInDown" data-out="fadeOutUp">
-				                    <li><a href="#home">home</a></li>
+				                    <li><a href="intro.html">intro</a></li>
 				                    <li><a href="app/group/list">moim</a></li>
 				                    <li><a href="app/group/search">search</a></li>
 														<li><a href="app/co/list">forum</a></li>
