--- a/src/main/webapp/moim-index.html
+++ b/src/main/webapp/moim-index.html
@@ -47,48 +47,26 @@
 <body>
 
 <div class="wrapper">
+   
     <div class="sidebar" data-color="orange" data-image="#">
-
       <!--   you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple" -->
-
-
     	<div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    어떤모임인지모임명뜨게
+                    어떤모임인지모임명뜨게?
                 </a>
             </div>
-
             <ul class="nav">
                 <li>
-                    <li class="active">
-                    <a href="app/notice/list">
-                        <i class="pe-7s-bell"></i>
-                        <p>공지사항</p>
+                    <a href="index.html">
+                        <i class="#"></i>
+                        <p>나가기</p>
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <i class="pe-7s-user"></i>
-                        <p>신규회원</p>
-                    </a>
-                </li>
-                <li> 
-                    <a href="#">
-                        <i class="pe-7s-note"></i>
-                        <p>투표하기</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="pe-7s-graph"></i>
-                        <p>모임통계</p>
-                    </a>
-                </li>
-               
             </ul>
     	</div>
     </div>
+
 
     <div class="main-panel">
 		<nav class="navbar navbar-default navbar-fixed">
@@ -100,7 +78,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="moim-index.html">모임홈</a>
+                    <a class="navbar-brand" href="moim-index.html">모임홈?</a>
                     <a class="navbar-brand" href="app/notice/list">공지</a>
                     <a class="navbar-brand" href="app/plan/list">일정</a>
                     <a class="navbar-brand" href="app/co/list">소통</a>
@@ -109,10 +87,7 @@
                     <a class="navbar-brand" href="app/member/list">회원</a>
                 </div>
                 <div class="collapse navbar-collapse">
-
-
                     <ul class="nav navbar-nav navbar-right">
-
                          <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-bell"></i>
@@ -154,87 +129,22 @@
        <!--content-->
         <div class="content">
             <div class="container-fluid">
-                <div class="row">
-
-
-
-                    <div class="col-md-12">
-                        <div class="card card-plain">
-                            <div class="header">
-                                <h4 class="title">공지사항</h4>
-                                <p class="category">모임의 공지가 올라오는 게시판</p>
-                            </div>
-                            <div class="content table-responsive table-full-width">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <th style="width: 10%">번호</th>
-                                    	<th style="width: 50%">제목</th>
-                                    	<th style="width: 10%">작성자</th>
-                                    	<th style="width: 10%">작성일</th>
-                                    	<th style="width: 10%">조회수</th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                        	<td>1</td>
-                                        	<td>테스트1</td>
-                                        	<td>곰비둘기</td>
-                                        	<td>2020-05-18</td>
-                                        	<td>0</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>2</td>
-                                        	<td>테스트2</td>
-                                        	<td>곰비둘기</td>
-                                        	<td>2020-05-18</td>
-                                        	<td>0</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>3</td>
-                                        	<td>테스트3</td>
-                                        	<td>곰비둘기</td>
-                                        	<td>2020-05-18</td>
-                                        	<td>0</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>4</td>
-                                        	<td>테스트4</td>
-                                        	<td>곰비둘기</td>
-                                        	<td>2020-05-18</td>
-                                        	<td>0</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>5</td>
-                                        	<td>테스트5</td>
-                                        	<td>곰비둘기</td>
-                                        	<td>2020-05-18</td>
-                                        	<td>0</td>
-                                        </tr>
-                                        <tr>
-                                        	<td>6</td>
-                                        	<td>테스트6</td>
-                                        	<td>곰비둘기</td>
-                                        	<td>2020-05-18</td>
-                                        	<td>0</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h1>모임 대표이미지와 최신글이 뜬다</h1>
             </div>
         </div>
 
 
-
-
+        <footer class="footer">
+            <div class="container-fluid">
+                <p class="copyright pull-right">
+                    &copy; <script>document.write(new Date().getFullYear())</script> <a href="index.html">네모내모</a>
+                </p>
+            </div>
+        </footer>
+        
     </div>
 </div>
 
 
 </body>
-
-   
-
-
 </html>
