[mod] 소통게시판 시간 출력방법 변경, moim_index.html 수정

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -150,7 +150,7 @@
               <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-center" data-in="fadeInDown" data-out="fadeOutUp">
                   <li><a href="intro.html">intro(임시)</a></li>
-                  <li><a href="app/group/list">search</a></li>
+                  <li><a href="app/group/list">moim</a></li>
                   <li><a href="app/co/list">forum</a></li>
                   <li><a href="#">contact</a></li>
                 </ul>
