[mod] tiles 공통부분 plan 별도로 분리

--- a/src/main/webapp/calendar/index.html
+++ b/src/main/webapp/calendar/index.html
@@ -168,7 +168,17 @@
     </div>
     <!-- /.container -->
 
-
+    <script src="vendor/js/jquery.min.js"></script>
+    <script src="vendor/js/bootstrap.min.js"></script>
+    <script src="vendor/js/moment.min.js"></script>
+    <script src="vendor/js/fullcalendar.min.js"></script>
+    <script src="vendor/js/ko.js"></script>
+    <script src="vendor/js/select2.min.js"></script>
+    <script src="vendor/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/addEvent.js"></script>
+    <script src="js/editEvent.js"></script>
+    <script src="js/etcSetting.js"></script>
 </body>
 
 </html>
