--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,84 +57,17 @@
             data-minus-value-mobile="55"
             data-speed="1000"
           >
-            <div class="container">
-              <!-- Start Atribute Navigation -->
-              <div class="attr-nav">
+                   <div class="container">
+ <div class="attr-nav">
                 <ul>
-                  <li class="dropdown">
-                    <a href="###app/alarm" class="dropdown-toggle" data-toggle="dropdown">
-                      <i class="fa fa-bell"></i>
-                      <!-- <span class="lnr lnr-alarm"></span> -->
-                      <span class="badge badge-bg-1">3</span>
-                    </a>
-                    <ul class="dropdown-menu cart-list s-cate">
-                      <li class="single-cart-list">
-                        <a href="#" class="photo"
-                          ><img src="images/collection/arrivals1.jpg" class="cart-thumb" alt="image"
-                        /></a>
-                        <div class="cart-list-txt">
-                          <h6><a href="#">알림1</a></h6>
-                        </div>
-                        <!--/.cart-list-txt-->
-                        <div class="cart-close">
-                          <span class="lnr lnr-cross"></span>
-                        </div>
-                        <!--/.cart-close-->
-                      </li>
-                      <!--/.single-cart-list -->
-                      <li class="single-cart-list">
-                        <a href="#" class="photo"
-                          ><img src="images/collection/arrivals2.jpg" class="cart-thumb" alt="image"
-                        /></a>
-                        <div class="cart-list-txt">
-                          <h6><a href="#">알림2</a></h6>
-                        </div>
-                        <!--/.cart-list-txt-->
-                        <div class="cart-close">
-                          <span class="lnr lnr-cross"></span>
-                        </div>
-                        <!--/.cart-close-->
-                      </li>
-                      <!--/.single-cart-list -->
-                      <li class="single-cart-list">
-                        <a href="#" class="photo"
-                          ><img src="images/collection/arrivals3.jpg" class="cart-thumb" alt="image"
-                        /></a>
-                        <div class="cart-list-txt">
-                          <h6><a href="#">알림3</a></h6>
-                        </div>
-                        <!--/.cart-list-txt-->
-                        <div class="cart-close">
-                          <span class="lnr lnr-cross"></span>
-                        </div>
-                        <!--/.cart-close-->
-                      </li>
-                      <!--/.single-cart-list -->
-                    </ul>
-                  </li>
-                  <!--/.dropdown(알림)-->
-
-                  <li class="###app/message?">
-                    <!--.message-->
-                    <a href="#"
-                      ><i class="fa fa-envelope"></i
-                      ><!--<span class="lnr lnr-envelope"></span>--></a
-                    >
-                  </li>
-                  <!--/.message-->
-
-                  <li class="profile">
-                    <!--.profile-->
-                    <a href="###app/mypage?" class="dropdown-toggle" data-toggle="dropdown">
-                      <i class="fa fa-user"></i
-                      ><!--<span class="lnr lnr-user"></span>-->
-                    </a>
-                  </li>
-                  <!--/.profile-->
-                </ul>
-              </div>
-              <!--/.attr-nav-->
-              <!-- End Atribute Navigation -->
+                 <li class="profile">
+  <a href='app/auth/logout'>로그아웃</a>
+</c:if> 
+</li>
+</ul>   
+</div>
+                  
+             
 
               <!-- Start Header Navigation -->
               <div class="navbar-header">
