[add] 회원정보 페이지 폼 추가

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,14 +61,12 @@
  <div class="attr-nav">
                 <ul>
                  <li class="profile">
-  <a href='app/auth/logout'>로그아웃</a>
-</c:if> 
+  <a href='app/auth/logout'>Logout</a>
+  <li>
+  <a href='app/member/mypage'>Mypage</a>
 </li>
 </ul>   
 </div>
-                  
-             
-
               <!-- Start Header Navigation -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
