[mod] admin폴더 생성

--- a/src/main/webapp/moim-index.html
+++ b/src/main/webapp/moim-index.html
@@ -52,17 +52,12 @@
       <!--   you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple" -->
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a href="#" class="simple-text">
-                    어떤모임인지모임명뜨게?
+                <a href="index.html" class="simple-text">
+                                     네모내모 로고
                 </a>
             </div>
             <ul class="nav">
-                <li>
-                    <a href="index.html">
-                        <i class="#"></i>
-                        <p>나가기</p>
-                    </a>
-                </li>
+
             </ul>
     	</div>
     </div>
@@ -84,6 +79,7 @@
                     <a class="navbar-brand" href="app/account/list">회계</a>
                     <a class="navbar-brand" href="app/feed/list">피드</a>
                     <a class="navbar-brand" href="app/member/list">회원</a>
+                    <a class="navbar-brand" href="app/admin/manual">관리</a> 
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
