[mod] intro 배경 적용

--- a/src/main/webapp/intro.html
+++ b/src/main/webapp/intro.html
@@ -40,7 +40,7 @@
 }
 
 .button {
-    background-color: darkgray;
+    background-color: red;
     border: none;
     color: white;
     padding: 15px 32px;
