[mod] index css 변경

--- a/src/main/webapp/intro.html
+++ b/src/main/webapp/intro.html
@@ -62,9 +62,9 @@
 <div class="flex-container">
   <div class="greenbox">
   
-  <h1>네모내모에 오신걸 환영합니다.</h1>
+  <h1> 나와 함께하지 않을래...?</h1>
   <br>
-  <a href="app/auth/login" class="button">로그인</a>
+  <a href="app/auth/login" class="button">함께하기 </a>
   <a href="app/auth/join" class="button">회원가입</a>
   
   </div>
