--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,9 +69,9 @@
 																<i class="fa fa-bars"></i>
 														</button>
 														 -->
-														<div class="logo" style="margin:20px 45px;">
-																<a  href="index.html" class="navbar-brand"> 
-																<img src="logo/logo_black2.png"   width="170" height="50" >
+														<div class="logo" style="margin:0px;">
+																<a href="index.html" class="navbar-brand"> 
+																<img src="logo/logo_black2.png" width="170" height="50">
 																</a>
 
 														</div>
