[mod] 피드에 카드 적용

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -159,7 +159,7 @@
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="#">추천모임2</a>
+																		<a href="app/moim/home?groupNo=${group.groupNo}">추천모임2</a>
 																</h2>
 														</div>
 												</div>
