[mod] 그룹넘버 받아오기, 모임생성 시 카테고리 셀렉트로 변경

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -241,17 +241,13 @@
 
 
 		<!-- footer-->
-		<footer class="footer">
-				<div class="container-fluid">
-						<p class="copyright pull-right">
-								&copy;
-								<script>
-									document.write(new Date().getFullYear());
-								</script>
-								<a href="index.html">네모내모</a>
-						</p>
-				</div>
-		</footer>
+   <footer class="footer">
+       <div class="container-fluid">
+           <p class="copyright pull-right">
+               &copy; <script>document.write(new Date().getFullYear())</script> <a href="index.html">네모내모</a>
+           </p>
+       </div>
+   </footer>
 
 		<!-- Include all js compiled plugins (below), or include individual files as needed -->
 
