[mod] 인트로 이미지 변경

--- a/src/main/webapp/intro.html
+++ b/src/main/webapp/intro.html
@@ -16,7 +16,7 @@
 
 <style>
  body {
-        background-image : url('back.png'); 
+        background-image : url('intro.jpg'); 
         background-repeat : no-repeat;
         background-size : cover;}
         
@@ -35,12 +35,12 @@
 }
 
 .greenbox {
-  color: red;
+  color: black;
   text-align: center;
 }
 
 .button {
-    background-color: red;
+    background-color: darkgray;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -62,9 +62,9 @@
 <div class="flex-container">
   <div class="greenbox">
   
-  <h1> 나와 함께하지 않을래...?</h1>
+  <h1> 모임 관리 프로젝트 네모내모</h1>
   <br>
-  <a href="app/auth/login" class="button">함께하기 </a>
+  <a href="app/auth/login" class="button">로그인 </a>
   <a href="app/auth/join" class="button">회원가입</a>
   
   </div>
