[mod] 인덱스.html 수정

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,7 +132,7 @@
 						<div class="section-header">
 								<hr>
 								<br>
-								<h4>추천모임 - 로그인한 멤버의 관심사와 일치하는 그룹의 리스트에서 썸네일을 가져온다</h4>
+								<h4>추천모임</h4>
 						</div>
 						<!--/.section-header-->
 
@@ -141,12 +141,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/blog/b2.jpg" alt="blog image" />
+																<img src="images/coding.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="app/group/listByRec">추천모임1</a>
+																		<a href="app/group/listByRec">노마드코더</a>
 																</h2>
 														</div>
 												</div>
@@ -154,12 +154,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/blog/b2.jpg" alt="blog image" />
+																<img src="images/cooking.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="app/moim/home?groupNo=${group.groupNo}">추천모임2</a>
+																		<a href="app/group/listByRec">밥해먹는모임</a>
 																</h2>
 														</div>
 												</div>
@@ -167,12 +167,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/blog/b3.jpg" alt="blog image" />
+																<img src="images/dance.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="#">추천모임3</a>
+																		<a href="#">댄싱퀸</a>
 																</h2>
 														</div>
 												</div>
@@ -186,7 +186,7 @@
 						<div class="section-header">
 								<hr>
 								<br>
-								<h4>신규모임 - 그룹리스트를 최신순으로 정렬해서 정보를 가져온다</h4>
+								<h4>신규모임</h4>
 						</div>
 						<!--/.section-header-->
 
@@ -195,12 +195,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/blog/b1.jpg" alt="blog image" />
+																<img src="images/dog.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="app/group/listByCd ">신규모임1</a>
+																		<a href="app/group/listByCd ">마이펫</a>
 																</h2>
 														</div>
 												</div>
@@ -208,12 +208,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/blog/b2.jpg" alt="blog image" />
+																<img src="images/game.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="#">신규모임2</a>
+																		<a href="app/group/listByCd">브론즈에서플레가기</a>
 																</h2>
 														</div>
 												</div>
@@ -221,12 +221,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/blog/b3.jpg" alt="blog image" />
+																<img src="images/motor.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="#">신규모임3</a>
+																		<a href="app/group/listByCd">매드맥스</a>
 																</h2>
 														</div>
 												</div>
