[mod] 모임생성하기 수정해서 잘됨

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -112,15 +112,15 @@
 						<br /> <br /> <br />
 						<div class="section-header">
 								<div>
-										<p>모임 검색 하시오</p>
+										<p>모임 검색</p>
 										<form action="app/group/search" method="GET">
 												<input type="text" name="keyword" placeholder="키워드" /> <input
-														type="submit" value="전송" />
+														type="submit" value="검색" />
 										</form>
 										<p>
 												<br>
 												<button>
-														<a href="app/group/form">모임만들기</a>
+														<a href="app/group/form">모임 만들기</a>
 												</button>
 										</p>
 								</div>
@@ -141,7 +141,7 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/coding.jpg" alt="blog image" />
+																<img src="images/coding1.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
@@ -154,12 +154,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/cooking.jpg" alt="blog image" />
+																<img src="images/coding2.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="app/group/listByRec">밥해먹는모임</a>
+																		<a href="app/group/listByRec">자바완전정복</a>
 																</h2>
 														</div>
 												</div>
@@ -167,12 +167,12 @@
 										<div class="col-sm-4">
 												<div class="single-blog">
 														<div class="single-blog-img">
-																<img src="images/dance.jpg" alt="blog image" />
+																<img src="images/coding3.jpg" alt="blog image" />
 																<div class="single-blog-img-overlay"></div>
 														</div>
 														<div class="single-blog-txt">
 																<h2>
-																		<a href="#">댄싱퀸</a>
+																		<a href="app/group/listByRec">코딩스쿨</a>
 																</h2>
 														</div>
 												</div>
